k8s/api-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: api-route
spec:
  to:
    kind: Service
    name: api-service
  port:
    targetPort: 8000
